Spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,14 +94,13 @@ nav h1 a {
 }
 
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 15px 16px;
     list-style: none;
     background: linear-gradient(to right, #eee 85%, transparent);
     font-size: 1.25rem;
     margin: 0 auto;
 		display: inline-block;
 		width: 100%;
-		max-width: 1200px;
 }
 
 /* Display list items side by side */
@@ -132,11 +131,13 @@ nav h1 a {
 
 @media (min-width: 750px) {
 	#breadcrumb {
+    padding: 10px 20px 16px;
 		background: linear-gradient(to right, #eee 65%, transparent);
 	}
 }
 @media (min-width: 900px) {
 	#breadcrumb {
+    padding: 10px 40px 16px;
 		background: linear-gradient(to right, #eee 65%, transparent);
 	}
 }
@@ -194,15 +195,21 @@ nav h1 a {
 @media (min-width: 750px) {
 	#map-container {
 		width: 70%;
+		min-height: 500px;
+	}
+	#map {
+		height: 100%;
 	}
 	.filter-options {
-    height: 360px;
-    width: 30%;
+    height: 500px;
+		width: 30%;
+		order: -1;
 	}
 	.filter-options select {
   	width: calc(100% - 13px); /* 22px = margins + borders */
 	}
 }
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -221,9 +228,6 @@ nav h1 a {
   padding: 10px;
   text-align: left;
   width: 100%;
-}
-#restaurants-list li:last-of-type {
-	margin-bottom: 0;
 }
 
 #restaurants-list .restaurant-img {
@@ -395,7 +399,7 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 150px 15px 30px;
+  padding: 140px 15px 30px;
   width: 100%;
 }
 
@@ -420,35 +424,41 @@ nav h1 a {
 	#restaurant-container {
 	  width: 50%;
 		height: auto;
-	  padding: 10px 10px 20px 20px;
+	  padding: 5px 0 20px 20px;
 	}
 	.inside #map-container {
 	  width: 50%;
 		height: auto;
-		padding: 25px 20px 20px 10px;
 		background-color: #f3f3f3;
 	  border-bottom: 1px solid #d9d9d9;
+		margin: 0;
+		padding-left: 20px;
 	}
-
 	#reviews-container {
-		padding: 20px;
+		padding: 20px 10px;
 	}
 }
 
-@media (min-width: 900px) {
+@media (min-width: 990px) {
 	#restaurant-container {
-		width: 35%;
+		width: 65%;
 	  padding-left: 40px;
 	}
 	#restaurant-img {
-		width: 100%;
+		width: calc(50% - 20px);
+		margin-right: 20px;
+		float: left;
+	}
+	#restaurant-cuisine {
+		float: right;
+		width: 50%;
 	}
 	#reviews-container {
 		padding: 20px 40px;
 	}
 	.inside #map-container {
-		width: 65%;
-		padding-right: 40px;
+		width: 35%;
+		min-height: 500px;
 	}
 }
 
